--- a/Hospital Management/Views/Home/RegisterPatient.cshtml
+++ b/Hospital Management/Views/Home/RegisterPatient.cshtml
@@ -20,25 +20,39 @@
 </div>
 <div class="row">
     <div class="container">
-        <form id="registerForm" action="/registerPatient" method="post">
+        <form id="registerForm" class="container-fluid p-0" action="/registerPatient" method="post">
             <h2>Register as a patient.</h2>
             <hr/>
-            <div class="form-floating mb-3">
-                <input type="text" id="name" name="name" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com"/>
-                <label for="name">Name</label>
+            <div class="container-fluid row m-0 p-0">
+                <div class="col-6">
+                    <div class="form-floating mb-3">
+                        <input type="text" id="name" name="name" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com"/>
+                        <label for="name">Name</label>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="form-floating mb-3">
+                        <input type="text" id="address" name="address" class="form-control" aria-required="true"/>
+                        <label for="address">Address</label>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input type="text" id="address" name="address" class="form-control" aria-required="true"/>
-                <label for="address">Address</label>
+
+            <div class="container-fluid row m-0 p-0">
+                <div class="col-6">
+                    <div class="form-floating mb-3">
+                        <input type="date" id="birthdate" name="birthdate" class="form-control" aria-required="true"/>
+                        <label for="birthdate">Birthdate</label>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="form-floating mb-3">
+                        <input type="email" id="email" name="email" class="form-control" aria-required="true"/>
+                        <label for="email">Email</label>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input type="date" id="birthdate" name="birthdate" class="form-control" aria-required="true"/>
-                <label for="birthdate">Birthdate</label>
-            </div>
-            <div class="form-floating mb-3">
-                <input type="email" id="email" name="email" class="form-control" aria-required="true"/>
-                <label for="email">Email</label>
-            </div>
+            
             <div class="row mb-3">
                 <label class="me-2 form-label">Gender</label>
                 <div class="d-flex flex-row">
@@ -56,12 +70,12 @@
                 <input maxlength="11" type="text" pattern="\d*" id="cellphoneNumber" name="cellphoneNumber" class="form-control" aria-required="true"/>
                 <label for="cellphoneNumber">Cellphone Number</label>
             </div>
-            
+
             <div class="form-floating mb-3">
                 <input type="text" id="referer" name="referer" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com"/>
                 <label for="referer">Doctor Name (Optional)</label>
             </div>
-            
+
             <div class="mb-3 form-check">
                 <input type="checkbox" id="tos-check" class="form-check-input" aria-required="true"/>
                 <label for="tos-check" class="form-check-label">I agree to the <a href="/tos">terms and services</a>.</label>
@@ -80,11 +94,12 @@
             </div>
 
             <button onclick="if (!document.getElementById('tos-check').checked) { alert('You need to agree to terms and conditions first!'); return false;}" id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary"><i class="bi bi-box-arrow-right"></i> Register</button>
+
         </form>
         <div class="container-fluid row mt-2">
             <p class="opacity-50 fst-italic">
                 Need assistance? Please call Comembo Care On-Call at 6388-8777 or email us at Comembocare@gmail.com
-                
+
             </p>
         </div>
     </div>
