--- a/Hospital Management/Views/Home/Invoicing.cshtml
+++ b/Hospital Management/Views/Home/Invoicing.cshtml
@@ -162,7 +162,7 @@
                                         @quantity
                                     </td>
                                     <td>
-                                        @(quantity * medicineObj.Price)
+                                        ₱@(quantity * medicineObj.Price)
                                     </td>
                                 </tr>
                             }
