--- a/Hospital Management/Views/Shared/_Layout.cshtml
+++ b/Hospital Management/Views/Shared/_Layout.cshtml
@@ -30,18 +30,23 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1 fw-bold">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="/aboutus">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="/services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="/tos">Terms of Service</a>
-                    </li>
+                    
+                    @if (!SignInManager.IsSignedIn(User) || User.IsInRole("Patient"))
+                    {
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/aboutus">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/services">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/tos">Terms of Service</a>
+                        </li>
+                    }
 
                     @if (!SignInManager.IsSignedIn(User))
                     {
