--- a/Hospital Management/Views/Home/DoctorPatientList.cshtml
+++ b/Hospital Management/Views/Home/DoctorPatientList.cshtml
@@ -62,7 +62,7 @@
                     <td>@patient.Email</td>
                     <td>@patient.Birthdate</td>
                     <td>@takenServices</td>
-                    <td class="container d-flex flex-column">
+                    <td class="container d-flex flex-row">
                         <a class="btn-primary btn rounded-3 m-1" href="/patients/edit/@patient.Id">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
