--- a/Hospital Management/Views/Home/RegisterService.cshtml
+++ b/Hospital Management/Views/Home/RegisterService.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject IHttpContextAccessor HttpContextAccessor
-@model Medicine?
+@model Service?
 @{
-    ViewData["Title"] = "Register Medicine";
+    ViewData["Title"] = "Register Service";
     var error = string.Empty;
     if (HttpContextAccessor.HttpContext.Request.Query.TryGetValue("error", out var errorString))
     {
@@ -22,29 +22,25 @@
 
 <div class="row m-4">
     <div class="container">
-        <form id="registerForm" action="/registerMedicine" method="post" enctype="multipart/form-data">
-            <h2>Register new medicine.</h2>
+        <form id="registerForm" action="/registerService" method="post" enctype="multipart/form-data">
+            <h2>Register new service.</h2>
             <hr/>
             <input type="hidden" name="id" class="form-control" value="@Model?.Id" autocomplete="username" aria-required="true"/>
             <div class="form-floating mb-3">
-                <input value="@Model?.MedicineName" id="nameid" type="text" name="name" class="form-control" autocomplete="username" aria-required="true"/>
-                <label for="nameid">Medicine Name</label>
+                <input value="@Model?.Name" id="nameid" type="text" name="name" class="form-control" autocomplete="username" aria-required="true"/>
+                <label for="nameid">Service Name</label>
             </div>
             <div class="form-floating mb-3">
-                <input value="@Model?.Quantity" type="number" name="quantity" id="addresId" class="form-control" aria-required="true"/>
-                <label for="addresId">Quantity</label>
+                <input value="@Model?.Description" type="text" name="description" id="addresId" class="form-control" aria-required="true"/>
+                <label for="addresId">Description</label>
             </div>
             <div class="form-floating mb-3">
                 <input value="@Model?.Price" type="text" name="price" id="addresId" class="form-control" aria-required="true"/>
                 <label for="addresId">Price</label>
             </div>
             <div class="form-floating mb-3">
-                <input value="@Model?.ExpiryDate.ToString("yyyy-MM-ddTHH:mm:ss")" type="datetime-local" name="expiry" id="addresId" class="form-control" aria-required="true"/>
-                <label for="addresId">Expiry Date</label>
-            </div>
-            <div class="mb-3">
-                <input id="image" type="file" name="image" class="form-control" aria-required="true"/>
-                <label for="image">Medicine Image</label>
+                <input value="@Model?.MoreInfo" type="text" name="moreInfo" id="addresId" class="form-control" aria-required="true"/>
+                <label for="addresId">MoreInfo</label>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary"><i class="bi bi-box-arrow-right"></i> Register</button>
         </form>
