--- a/Hospital Management/Views/Home/Services.cshtml
+++ b/Hospital Management/Views/Home/Services.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Linq;
-@model List<dynamic> 
+@model List<Service> 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
