--- a/Hospital Management/Views/Home/Patient.cshtml
+++ b/Hospital Management/Views/Home/Patient.cshtml
@@ -46,7 +46,7 @@
                 <p class="mb-0">Service<strong> @appointments.Services</strong></p>
                 <div class="container-fluid d-flex flex-row fw-bold">
                     <a href="/delete/@appointments.AppointmentId" class="btn btn-danger me-2 mb-2"><i class="bi bi-trash3"></i> Delete</a>
-                    <a href="/check-invoice/@appointments.AppointmentId" class="btn btn-info me-2 mb-2"><i class="bi bi-pen"></i> Veiw</a>
+                    <a href="/check-invoice/@appointments.AppointmentId" class="btn btn-info me-2 mb-2"><i class="bi bi-eye-fill"></i> View</a>
                 </div>
             </div>
         }
